# polymarket_scanner

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  TECH_DOC.md
data/: events.json  markets.json
examples/: basic_scan.rs  fetch_markets.rs  query_db.rs  scan_all.rs  stream_scan.rs  test_json_db_batch.rs
src/: api.rs  database.rs  db.rs  error.rs  json_db.rs  lib.rs  main.rs  scanner.rs  storage.rs  types.rs
web/: app.js  index.html  style.css
